# crucible

./: .gitignore  .golangci.yml  .landmark.yml  AGENTS.md  CI-FAILURE-SUMMARY.md  CI-RESOLUTION-PLAN.md  CLAUDE.md  Cargo.toml  Makefile  QA.md  README.md  SKILL.md  VISION.md  clippy.toml  crucible  go.mod  main.go  opencode.json
backlog.d/: 001-shape-first-eval-workbench.md  002-codereview-eval-wedge.md  003-measurement-rigor-core.md  004-eval-object-and-grader-mix.md  005-phone-adjudication-queue.md  006-agent-readiness-machine-surface.md  007-extract-eval-authoring-from-daedalus.md  009-live-eval-dashboard.md  (+29 more)
crucible/: Cargo.toml
crucible-core/: Cargo.toml
crucible-core/src/: adapter.rs  adjudication.rs  artifact.rs  calibration.rs  environment.rs  error.rs  export.rs  grade.rs  import.rs  judgment.rs  key.rs  label.rs  lib.rs  measure.rs  provenance.rs  runner_exchange.rs  serde_util.rs  spec.rs  trace.rs
crucible-core/src/dashboard/: leaderboard.rs  mod.rs
crucible-core/src/measure/: agreement.rs  bootstrap.rs  mod.rs  normal.rs  paired.rs  power.rs  rate.rs
crucible-core/tests/: adapter_map.rs  fixture_parse.rs  grade_synthetic.rs  runner_exchange.rs
crucible-core/tests/fixtures/promptfoo/: SOURCE.md
crucible-core/tests/fixtures/runner-exchange/: generic-request.json  generic-result.json  harbor-request.json  harbor-result.json
crucible/harbor_agents/: __init__.py  omp_agent.py
crucible/src/: adjudication_panel.rs  adjudication_server.rs  author.rs  canary.rs  dashboard_html.rs  doctor.rs  eval_run.rs  findings_journal.rs  harbor_import.rs  import.rs  main.rs  mcp.rs  publish.rs  run_fanout.rs  run_matrix.rs  run_prompt_variants.rs  run_store.rs  serve.rs  spec_run.rs  spec_save.rs  test_fixtures.rs  validate.rs
crucible/tests/: author.rs  cerberus_contract.rs  cli.rs  dashboard.rs  doctor.rs  export.rs
crucible/tests/fixtures/: artifact-invalid-finding.json  cerberus-artifact.json  cerberus-receipt-bundle.json  cold-agent-artifact.json  cold-agent-expected.json  cold-agent-receipt-bundle.json  empty-artifact.json  expected-defects.json  export-adjudications.golden.md  export-original-expected.json  export-original-key.json  export-queue.json  key-array.json  key-colocated-other-category.json  key.json  labels-duplicate-f1.json  labels-keep-f1.json  labels-unknown-id.json
crucible/tests/fixtures/contracts/: cerberus.crucible_producer_manifest.v1.schema.json  cerberus.crucible_producer_manifest.v1.valid.json
crucible/tests/fixtures/harbor-tasks/current-template-smoke/: instruction.md  task.toml
crucible/tests/fixtures/harbor-tasks/current-template-smoke/environment/: Dockerfile
crucible/tests/fixtures/harbor-tasks/current-template-smoke/solution/: solve.sh
crucible/tests/fixtures/harbor-tasks/current-template-smoke/tests/: test.sh
crucible/tests/fixtures/harbor-tasks/omp-evidence-routing-pilot/: instruction.md  task.toml
crucible/tests/fixtures/harbor-tasks/omp-evidence-routing-pilot/environment/: Dockerfile
crucible/tests/fixtures/harbor-tasks/omp-evidence-routing-pilot/environment/evidence/: cards.json  selection-policy.json
crucible/tests/fixtures/harbor-tasks/omp-evidence-routing-pilot/solution/: solve.sh
crucible/tests/fixtures/harbor-tasks/omp-evidence-routing-pilot/tests/: test.sh
crucible/tests/fixtures/spec-corpus/: trials.jsonl
crucible/tests/fixtures/spec-corpus/arena/tasks/t1/tests/: expected.json
crucible/tests/fixtures/specs/: cerberus-receipt-fixture.json  cold-agent-smoke-v0.json  key-recall-fixture.json
(+193 files in other folders)
