[workspace]
resolver = "2"
members = ["crucible-core", "crucible"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/phrazzld/crucible"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crucible-core = { path = "crucible-core" }
