[workspace]
resolver = "2"
members = ["crucible-core", "crucible"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.96"
repository = "https://github.com/misty-step/crucible"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
crucible-core = { path = "crucible-core" }
