[workspace]
resolver = "2"
members = ["crucible-core", "crucible"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.96"
repository = "https://github.com/misty-step/crucible"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
time = { version = "0.3.53", default-features = false, features = ["formatting", "parsing", "std"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
crucible-core = { path = "crucible-core" }
