[package]
name = "crucible-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deterministic core for Crucible's code-review eval: Cerberus artifact and Daedalus answer-key types plus adjudication primitives."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
