[package]
name = "crucible"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CLI for Crucible's code-review eval: score a Cerberus review run against a Daedalus answer key."

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
crucible-core.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
