[package]
name = "crucible"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Crucible: author, run, validate, judge, and export defensible evals/benchmarks (declared EvalSpecs, live OpenRouter model runs, a queryable SQLite run ledger, and a local browser workbench)."

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
crucible-core.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
time.workspace = true
regex.workspace = true
